# egb

./: .gitignore  pyproject.toml
egb/: manage.py
egb/egb/: asgi.py  settings.py  urls.py  wsgi.py
