[tool.poetry]
name = "egb"
version = "0.1.0"
description = "Electronic Grade Book"
authors = ["dominik24c <dominik24c@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
